# MatchCast

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  retrain.yml
src/matchcast/: __init__.py  api.py  config.py  db.py  features.py  ingest.py  live.py  models.py  monitoring.py  pipeline.py  registry.py  scoring.py  serving.py  simulate.py  train.py  validation.py
src/matchcast/clients/: football_data.py
src/matchcast/static/: index.html
tests/: conftest.py  test_api.py  test_features.py  test_football_data_client.py  test_ingest.py  test_live.py  test_monitoring.py  test_pipeline.py  test_registry.py  test_scoring.py  test_serving.py  test_simulate.py  test_smoke.py  test_train.py
